[ADD] Top bar - mobile first

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>htmlcss-responsive-layout</title>
 </head>
 <body>
-  
+  <header>
+    <section class="container">
+      <div class="top-bar">
+        <div class="logo">logo</div>
+        <div class="menu">menu</div>
+      </div>
+    </section>
+  </header>
+
+  <main></main>
+
+  <footer></footer>
 </body>
 </html>
