[ADD] Planning section

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/66b933bf5d.js" crossorigin="anonymous"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>htmlcss-responsive-layout</title>
 </head>
+
 <body>
   <header>
     <section class="container">
@@ -16,7 +19,53 @@
     </section>
   </header>
 
-  <main></main>
+  <main>
+    <section class="container demo-app">
+      <div class="row">
+        <div class="col">
+          <div class="card">demo application</div>
+        </div>
+        <div class="col">
+          <div class="card">clean code</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">web design</div>
+        </div>
+        <div class="col">
+          <div class="card">developement</div>
+        </div>
+        <div class="col">
+          <div class="card">branding</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="strategic-pl">
+      <section class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card planning">
+              <div class="img">img</div>
+              <div class="text">text</div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card developement">
+              <div class="img">img</div>
+              <div class="text">text</div>
+              <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <section class="container testimonials"></section>
+    <section class="container benefits"></section>
+    <section class="container about-us"></section>
+    <section class="container get-started"></section>
+  </main>
 
   <footer></footer>
 </body>
