[ADD] Testimonials & benefits sections

--- a/index.html
+++ b/index.html
@@ -60,9 +60,90 @@
           </div>
         </div>
       </section>
+    </section>
 
-    <section class="container testimonials"></section>
-    <section class="container benefits"></section>
+    <section class="container testimonials container">
+      <div class="row">
+        <div class="col">
+          <div class="testimonials-txt">Text</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="img">img</div>
+            <div class="text">text</div>
+            <span>name</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="img">img</div>
+            <div class="text">text</div>
+            <span>name</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="img">img</div>
+            <div class="text">text</div>
+            <span>name</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="benefits">
+      <section class="container">
+        <div class="benefits-title">
+          <h2>Title</h2>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <span>01</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+          <div class="card">
+            <span>02</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+          <div class="card">
+            <span>03</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+          <div class="card">
+            <span>04</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+          <div class="card">
+            <span>05</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+          <div class="card">
+            <span>06</span>
+            <span>text</span>
+            <p>parag</p>
+            <button>button</button>
+          </div>
+        </div>
+      </section>
+    </section>
+      
+
     <section class="container about-us"></section>
     <section class="container get-started"></section>
   </main>
