[ADD] Main final sections

--- a/index.html
+++ b/index.html
@@ -143,9 +143,37 @@
       </section>
     </section>
       
+    <section class="container about-us">
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div>title</div>
+            <div>parag</div>
+          </div>
+        </div>
+      
+        <div class="col">
+          <div class="card">
+            <div class="img">img</div>
+            <div>parag</div>
+            <button>button</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <section class="container about-us"></section>
-    <section class="container get-started"></section>
+    <section class="get-started">
+      <section class="container">
+        <div class="card">
+          <span>title</span>
+          <span>subtitle</span>
+          <span>free</span>
+          <p>text</p>
+          <button>button</button>
+          <p>text</p>
+        </div>
+      </section>
+    </section>
   </main>
 
   <footer></footer>
