--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
     </section>
   </main>
 
-  <footer></footer>
+  <footer>
+    <section class="container bottom">
+      <div>text</div>
+      <div>text</div>
+    </section>
+  </footer>
 </body>
 </html>
