--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/66b933bf5d.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/66b933bf5d.js" crossorigin="anonymous"></script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +17,21 @@
   <header>
     <section class="container">
       <div class="top-bar">
-        <div class="logo">logo</div>
-        <div class="menu">menu</div>
+        <div class="logo">
+          <img src="img/logo.png" alt="logo">
+        </div>
+        <div class="ham-menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="menu">
+          <span>Planning</span>
+          <span>Testimonials</span>
+          <span>Features</span>
+          <span>About Us</span>
+          <div>
+            <button>Get Started</button>
+          </div>
+        </div>
       </div>
     </section>
   </header>
