[ADD] Demo card

--- a/index.html
+++ b/index.html
@@ -37,24 +37,33 @@
   </header>
 
   <main>
-    <section class="container demo-app">
+    <section class="container demo-sec">
       <div class="row">
         <div class="col">
-          <div class="card">demo application</div>
+          <div class="card demo">
+            <div class="demo-txt">
+              <span>Get demo application</span>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ipsam similique cumque perspiciatis quas totam ipsa dignissimos commodi aut facere.</p>
+              <button><i class="fa-brands fa-apple"></i> App Store</button>
+            </div>
+            <div class="demo-img">
+              <img src="img/phone.png" alt="">
+            </div>
+          </div>
         </div>
         <div class="col">
-          <div class="card">clean code</div>
+          <div class="card clean-code">clean code</div>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <div class="card">web design</div>
+          <div class="card web-design">web design</div>
         </div>
         <div class="col">
-          <div class="card">developement</div>
+          <div class="card develop">developement</div>
         </div>
         <div class="col">
-          <div class="card">branding</div>
+          <div class="card brand">branding</div>
         </div>
       </div>
     </section>
