[ADD] Top section

--- a/index.html
+++ b/index.html
@@ -52,18 +52,34 @@
           </div>
         </div>
         <div class="col">
-          <div class="card clean-code">clean code</div>
+          <div class="card clean-code">
+            <i class="fa-solid fa-file-code"></i>
+            <span>Clean Code</span>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae alias nemo necessitatibus autem ratione sapiente aperiam! Possimus, molestiae praesentium!</p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <div class="card web-design">web design</div>
+          <div class="card web-design">
+            <i class="fa-solid fa-compass-drafting"></i>
+            <span>Web Design</span>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae alias nemo necessitatibus autem ratione sapiente aperiam! Possimus, molestiae praesentium!</p>
+          </div>
         </div>
         <div class="col">
-          <div class="card develop">developement</div>
+          <div class="card develop">
+            <i class="fa-solid fa-laptop-code"></i>
+            <span>Developement</span>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae alias nemo necessitatibus autem ratione sapiente aperiam! Possimus, molestiae praesentium!</p>
+          </div>
         </div>
         <div class="col">
-          <div class="card brand">branding</div>
+          <div class="card brand">
+            <i class="fa-solid fa-bullhorn"></i>
+            <span>Branding</span>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae alias nemo necessitatibus autem ratione sapiente aperiam! Possimus, molestiae praesentium!</p>
+          </div>
         </div>
       </div>
     </section>
