--- a/index.html
+++ b/index.html
@@ -89,14 +89,24 @@
         <div class="row">
           <div class="col">
             <div class="card planning">
-              <div class="img">img</div>
-              <div class="text">text</div>
+              <div class="planning-img">
+                <img src="img/planning1.png" alt="">
+              </div>
+              <div class="text">
+                <span>Strategic Planning</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima voluptatem nam, reprehenderit officia quasi corporis libero hic facilis eos obcaecati quaerat porro, voluptatum consequuntur facere culpa eligendi, eaque atque?</p>
+              </div>
             </div>
           </div>
           <div class="col">
             <div class="card developement">
-              <div class="img">img</div>
-              <div class="text">text</div>
+              <div class="developement-img">
+                <img src="img/planning2.png" alt="">
+              </div>
+              <div class="text">
+                <span>App Developement</span>
+                <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+              </div>
               <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
             </div>
           </div>
