[ADD] Testimonials section

--- a/index.html
+++ b/index.html
@@ -117,33 +117,49 @@
     <section class="container testimonials container">
       <div class="row">
         <div class="col">
-          <div class="testimonials-txt">Text</div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <div class="img">img</div>
-            <div class="text">text</div>
-            <span>name</span>
+          <div class="testimonials-txt">
+            <span>Testimonials</span>
+            <span>We are committed expert partners</span>
+            <p>We place huge value on strong relationships and have seen the benefut they bring to our business. Customer feedback is vital in helping us to get it right.</p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
           <div class="card">
-            <div class="img">img</div>
-            <div class="text">text</div>
-            <span>name</span>
+            <div class="testimonial-img">
+              <img src="img/testimonial1.jpg" alt="">
+            </div>
+            <div class="text">
+              <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ipsum, sunt quae nesciunt porro quod nam culpa eos accusantium earum. <i class="fa-solid fa-quote-right"></i></p>
+              <span>Nat Reynolds</span>
+            </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
           <div class="card">
-            <div class="img">img</div>
-            <div class="text">text</div>
-            <span>name</span>
+            <div class="testimonial-img">
+              <img src="img/testimonial2.jpg" alt="">
+            </div>
+            <div class="text">
+              <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ipsum, sunt quae nesciunt porro quod nam culpa eos accusantium earum. <i class="fa-solid fa-quote-right"></i></p>
+              <span>celia Almeda</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="testimonial-img">
+              <img src="img/testimonial3.jpg" alt="">
+            </div>
+            <div class="text">
+              <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ipsum, sunt quae nesciunt porro quod nam culpa eos accusantium earum. <i class="fa-solid fa-quote-right"></i></p>
+              <span>Bob Roberts</span>
+            </div>
           </div>
         </div>
       </div>
