[ADD] Benefits section

--- a/index.html
+++ b/index.html
@@ -168,44 +168,56 @@
     <section class="benefits">
       <section class="container">
         <div class="benefits-title">
-          <h2>Title</h2>
+          <span>Benefits of working with us</span>
         </div>
         <div class="card-container">
           <div class="card">
-            <span>01</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>01</span>
+              <span>High Quality</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta blanditiis quaerat quia culpa soluta at similique laboriosam in perspiciatis amet!</p>
+            </div>
+            <button>more</button>
           </div>
           <div class="card">
-            <span>02</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>02</span>
+              <span>Creative team</span>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat ipsam mollitia porro nostrum quisquam sed praesentium assumenda alias dolores autem?</p>
+            </div>
+            <button>more</button>
           </div>
           <div class="card">
-            <span>03</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>03</span>
+              <span>Amazing Results</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, sint. Recusandae debitis aspernatur iste fugiat deserunt mollitia tempore obcaecati similique?</p>
+            </div>
+            <button>more</button>
           </div>
           <div class="card">
-            <span>04</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>04</span>
+              <span>Best Pricing</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, sint. Recusandae debitis aspernatur iste fugiat deserunt mollitia tempore obcaecati similique?</p>
+            </div>
+            <button>more</button>
           </div>
           <div class="card">
-            <span>05</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>05</span>
+              <span>Innovations</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, sint. Recusandae debitis aspernatur iste fugiat deserunt mollitia tempore obcaecati similique?</p>
+            </div>
+            <button>more</button>
           </div>
           <div class="card">
-            <span>06</span>
-            <span>text</span>
-            <p>parag</p>
-            <button>button</button>
+            <div class="benefits-text">
+              <span>06</span>
+              <span>24/4 Support</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, sint. Recusandae debitis aspernatur iste fugiat deserunt mollitia tempore obcaecati similique?</p>
+            </div>
+            <button>more</button>
           </div>
         </div>
       </section>
