[ADD] About us section

--- a/index.html
+++ b/index.html
@@ -227,16 +227,19 @@
       <div class="row">
         <div class="col">
           <div class="card">
-            <div>title</div>
-            <div>parag</div>
+            <span>About Us</span>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus in, incidunt molestias eveniet asperiores minus magnam provident est vel ex sapiente molestiae rerum eaque aut fuga fugiat illum quam maxime qui sunt blanditiis. Inventore ratione officiis temporibus autem est quidem neque at, delectus eaque quia. Quam harum velit maxime itaque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptates, inventore eaque labore deleniti aperiam minima temporibus rerum similique ea animi magni suscipit tempore quae earum facilis veniam. Totam, delectus. Dolores officiis, tempore quia neque voluptates numquam aliquam illum, a unde natus voluptatibus in minima. Ad eius asperiores similique quas!</p>
           </div>
         </div>
-      
         <div class="col">
           <div class="card">
-            <div class="img">img</div>
-            <div>parag</div>
-            <button>button</button>
+            <div class="about-us-img">
+              <img src="img/about.jpg" alt="">
+            </div>
+            <i class="fa-solid fa-quote-left"></i>
+            <p>I held companies tincidunt tortor aliquam nulla facilis cras fementum odio.</p>
+            <button><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
           </div>
         </div>
       </div>
