[ADD] Get started section

--- a/index.html
+++ b/index.html
@@ -248,12 +248,14 @@
     <section class="get-started">
       <section class="container">
         <div class="card">
-          <span>title</span>
-          <span>subtitle</span>
-          <span>free</span>
-          <p>text</p>
-          <button>button</button>
-          <p>text</p>
+          <div class="get-started-text">
+            <span>Get Started</span>
+            <span>Simple, Transparent Pricing</span>
+            <span>It's Free!</span>
+            <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into others plans with more controls.</p>
+          </div>
+          <button>Get Started</button>
+          <p>Copyright 2023 Boolean &#8226 Classe 105 &#8226 Privacy policy</p>
         </div>
       </section>
     </section>
