--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
 
   <footer>
     <section class="container bottom">
-      <div>text</div>
-      <div>text</div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, vitae provident aut saepe odio dignissimos quasi nisi vero illum iusto.</p>
+      <p><span>Lorem ipsum</span> scelerisque mauris pellentesque</p>
+      <span>Boolean careers</span>
     </section>
   </footer>
 </body>
