[ADD] Comments [FIX] Sections padding

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header>
     <section class="container">
       <div class="top-bar">
@@ -36,7 +37,9 @@
     </section>
   </header>
 
+  <!-- MAIN -->
   <main>
+    <!-- DEMO SECTION -->
     <section class="container demo-sec">
       <div class="row">
         <div class="col">
@@ -84,6 +87,7 @@
       </div>
     </section>
 
+    <!-- STRATEGIC PLANNING -->
     <section class="strategic-pl">
       <section class="container">
         <div class="row">
@@ -114,6 +118,7 @@
       </section>
     </section>
 
+    <!-- TESTIMONIALS -->
     <section class="container testimonials container">
       <div class="row">
         <div class="col">
@@ -165,6 +170,7 @@
       </div>
     </section>
 
+    <!-- BENEFITS -->
     <section class="benefits">
       <section class="container">
         <div class="benefits-title">
@@ -222,7 +228,8 @@
         </div>
       </section>
     </section>
-      
+    
+    <!-- ABOUT US -->
     <section class="container about-us">
       <div class="row">
         <div class="col">
@@ -245,6 +252,7 @@
       </div>
     </section>
 
+    <!-- GET STARTED -->
     <section class="get-started">
       <section class="container">
         <div class="card">
@@ -261,6 +269,7 @@
     </section>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <section class="container bottom">
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, vitae provident aut saepe odio dignissimos quasi nisi vero illum iusto.</p>
