[FIX] Card heights

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="card clean-code">
             <i class="fa-solid fa-file-code"></i>
             <span>Clean Code</span>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae alias nemo necessitatibus autem ratione sapiente aperiam! Possimus, molestiae praesentium!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, eaque mollitia amet odio corrupti neque cupiditate necessitatibus? Porro quam nulla magni error! Quo, vel consequatur minus atque similique in eum consectetur nesciunt! Culpa veniam, excepturi nesciunt blanditiis voluptatibus quidem repudiandae explicabo beatae, facere sunt, incidunt praesentium deleniti error modi illum!</p>
           </div>
         </div>
       </div>
